# graphrs

./: .gitignore  Cargo.toml  README.md  build.rs  performance.md  random.graphml  rustfmt.toml
.github/workflows/: rust.yml
src/: digraph.rs  edge.rs  edge_index.rs  error.rs  generators.rs  graph.rs  graph_specs.rs  graph_subgraph.rs  lib.rs  main copy.rs  main-dijkstra-timing.rs  main-tuple-vs-edgeindex.rs  main-vec-vs-hashmap.rs  main-vec-vs-hashset copy.rs  main.rs  merge_attributes.rs  missing_node_strategy.rs  mod_generators.rs  node.rs  node_attributes.rs
src/algorithms/: mod.rs
src/algorithms/boundary/: mod.rs
src/algorithms/centrality/: betweenness.rs  closeness.rs  degree.rs  eigenvector.rs  fringe_node.rs  mod.rs
src/algorithms/centrality/groups/: betweenness.rs  closeness.rs  degree.rs  mod.rs
src/algorithms/cluster/: directed.rs  directed_weighted.rs  mod.rs  square.rs  undirected.rs  undirected_weighted.rs  utility.rs
src/algorithms/community/: leiden.rs  louvain.rs  mod.rs  partitions.rs  utility.rs
src/algorithms/community/leiden/: aggregate_graph.rs  mod.rs  partition.rs  quality.rs
src/algorithms/components/: connectivity.rs  mod.rs  strong_connectivity.rs  weak_connectivity.rs
src/algorithms/cuts/: mod.rs
src/algorithms/resiliency/: average_node_betweenness.rs  mod.rs  spectral_gap.rs
src/algorithms/shortest_path/: dijkstra.rs  mod.rs  mslc_apsp.rs  shortest_path_info.rs  unweighted.rs  weighted.rs
src/algorithms/structural_holes/: constraint.rs  mod.rs
src/ext/: hashset.rs  iterator.rs  mod.rs  vec.rs
src/generators/: classic.rs  mod.rs  random.rs  social.rs
src/graph/: adjacent_node.rs  convert.rs  creation.rs  degree.rs  density.rs  ensure.rs  matrix.rs  mod.rs  query.rs  sparse_matrix.rs  subgraph.rs  successor.rs
src/readwrite/: graphml.rs  mod.rs
tests/: karate.graphml  test_algorithms_centrality_betweenness.rs  test_algorithms_centrality_closeness.rs  test_algorithms_centrality_degree.rs  test_algorithms_centrality_eigenvector.rs  test_algorithms_cluster.rs  test_algorithms_community_louvain.rs  test_algorithms_community_partitions.rs  test_algorithms_components_connectivity.rs  test_algorithms_components_strong_connectivity.rs  test_algorithms_components_weak_connectivity.rs  test_algorithms_shortest_path_dijkstra_unweighted.rs  test_algorithms_shortest_path_dijkstra_weighted.rs  test_algorithms_shortest_path_unweighted.rs  test_algorithms_shortest_path_weighted.rs  test_digraph.rs  test_directed.rs  test_directed_multi.rs  test_edge.rs  test_generators.rs  test_generators_classic.rs  test_generators_random.rs  test_graph_convert.rs  test_graph_degree.rs  test_graph_density.rs  test_graph_query.rs  test_graph_subgraph.rs  test_node_attributes.rs  test_readwrite_graphml.rs  test_undirected.rs  test_undirected_multi.rs  utility.rs
tests/files/: karate.graphml
