[package]
name = "graphrs"
version = "0.10.2"
authors = ["Malcolm van Raalte <malcolm@van.raalte.ca>"]
description = "graphrs is a Rust package for the creation, manipulation and analysis of graphs."
edition = "2018"
license = "MIT"
homepage = "https://github.com/malcolmvr/graphrs"
repository = "https://github.com/malcolmvr/graphrs"
documentation = "https://docs.rs/graphrs"
readme = "README.md"
keywords = ["graph", "network", "directed", "undirected", "multigraph"]
categories = ["data-structures", "algorithms", "mathematics", "science"]
exclude = [".vscode/*", "tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc-comment = "0.3.3"
indexmap = "2.6.0"
itertools = "0.12.1"
nohash = "0.2.0"
orx-priority-queue = "1.4.0"
quick-xml = "0.31.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.9.0"
rudac = "0.8.3"
serde = { version = "1.0.197", optional = true, features = ["derive"] }
sorted-vec = "0.8.5"
sprs = "0.11.2"
statrs = "0.16.0"
vec_to_array = "0.2.1"

[profile.release]
debug = 2
