[package]
name = "graphrs"
version = "0.11.14"
authors = ["Malcolm van Raalte <malcolm@van.raalte.ca>"]
description = "graphrs is a Rust package for the creation, manipulation and analysis of graphs."
edition = "2018"
license = "MIT"
homepage = "https://github.com/malcolmvr/graphrs"
repository = "https://github.com/malcolmvr/graphrs"
documentation = "https://docs.rs/graphrs"
readme = "README.md"
keywords = ["graph", "network", "directed", "undirected", "multigraph"]
categories = ["data-structures", "algorithms", "mathematics", "science"]
exclude = [".vscode/*", "tests/*"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
assert_unordered = "0.3.5"
doc-comment = "0.3.3"
itertools = "0.13.0"
lapack-sys = { version = "0.14.0", optional = true }
nalgebra = { version = "0.33.2", optional = true }
ndarray = { version = "0.16.1", optional = true }
nohash = "0.2.0"
quick-xml = "0.37.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
sorted-vec = "0.8.5"
sprs = { version = "0.11.2", optional = true }

[features]
adjacency_matrix = ["dep:lapack-sys", "dep:nalgebra", "dep:ndarray", "dep:sprs"]

[package.metadata."docs.rs"]
all-features = true
